get_property(PUBLIC_BISHENGIR_LIBS GLOBAL PROPERTY BISHENGIR_OPEN_SOURCE_LIBS)
get_property(PUBLIC_BISHENGIR_DIALECT_LIBS GLOBAL PROPERTY BISHENGIR_DIALECT_OPEN_SOURCE_LIBS)
get_property(PUBLIC_BISHENGIR_CONVERSION_LIBS GLOBAL PROPERTY BISHENGIR_CONVERSION_OPEN_SOURCE_LIBS)
get_property(PUBLIC_BISHENGIR_TRANSLATION_LIBS GLOBAL PROPERTY BISHENGIR_OPEN_SOURCE_TRANSLATION_LIBS)
get_property(PUBLIC_BISHENGIR_EXTENSION_LIBS GLOBAL PROPERTY BISHENGIR_OPEN_SOURCE_EXTENSION_LIBS)
get_property(PRIVATE_BISHENGIR_LIBS GLOBAL PROPERTY BISHENGIR_LIBS)
get_property(PRIVATE_BISHENGIR_DIALECT_LIBS GLOBAL PROPERTY BISHENGIR_DIALECT_LIBS)
get_property(PRIVATE_BISHENGIR_CONVERSION_LIBS GLOBAL PROPERTY BISHENGIR_CONVERSION_LIBS)
get_property(PRIVATE_BISHENGIR_TRANSLATION_LIBS GLOBAL PROPERTY BISHENGIR_TRANSLATION_LIBS)
get_property(PRIVATE_BISHENGIR_EXTENSION_LIBS GLOBAL PROPERTY BISHENGIR_EXTENSION_LIBS)

if(MLIR_INCLUDE_TESTS)
  set(TEST_LIBS
    BishengIRTestDialect
    MLIRAffineTransformsTestPasses
    MLIRShapeTestPasses
    MLIRSPIRVTestPasses
    MLIRTestAnalysis
    MLIRTestDialect
    MLIRTestDynDialect
    MLIRTestIR
    MLIRTestPass
    MLIRTestReducer
    )
  set(TEST_LIBS
    ${TEST_LIBS}
    MLIRTestTransformDialect
    MLIRTestTransforms)
endif()

set(LIBS
  ${TEST_LIBS}
  ${PUBLIC_BISHENGIR_LIBS}
  ${PUBLIC_BISHENGIR_DIALECT_LIBS}
  ${PUBLIC_BISHENGIR_CONVERSION_LIBS}
  ${PUBLIC_BISHENGIR_TRANSLATION_LIBS}
  ${PUBLIC_BISHENGIR_EXTENSION_LIBS}
  ${PRIVATE_BISHENGIR_LIBS}
  ${PRIVATE_BISHENGIR_DIALECT_LIBS}
  ${PRIVATE_BISHENGIR_CONVERSION_LIBS}
  ${PRIVATE_BISHENGIR_TRANSLATION_LIBS}
  ${PRIVATE_BISHENGIR_EXTENSION_LIBS}
)

add_mlir_tool(bishengir-lsp-server
  bishengir-lsp-server.cpp
  DEPENDS
  ${LIBS}
)

target_link_libraries(bishengir-lsp-server PRIVATE 
  MLIRLspServerLib    
  ${LIBS}
)

mlir_check_all_link_libraries(bishengir-lsp-server)
