if(MLIR_INCLUDE_TESTS)
  set(TEST_LIBS
    BishengIRTestDialect 
    BishengIRTestDialectHFusion
    MLIRTestDialect
    MLIRTestTransformDialect
    MLIRTestTransforms
    BishengIRTestDialectUtils
  )
endif()

get_property(PUBLIC_BISHENGIR_LIBS GLOBAL PROPERTY BISHENGIR_OPEN_SOURCE_LIBS)
get_property(PUBLIC_BISHENGIR_DIALECT_LIBS GLOBAL PROPERTY BISHENGIR_DIALECT_OPEN_SOURCE_LIBS)
get_property(PUBLIC_BISHENGIR_CONVERSION_LIBS GLOBAL PROPERTY BISHENGIR_CONVERSION_OPEN_SOURCE_LIBS)
get_property(PUBLIC_BISHENGIR_TRANSLATION_LIBS GLOBAL PROPERTY BISHENGIR_OPEN_SOURCE_TRANSLATION_LIBS)
get_property(PUBLIC_BISHENGIR_EXTENSION_LIBS GLOBAL PROPERTY BISHENGIR_OPEN_SOURCE_EXTENSION_LIBS)
get_property(PRIVATE_BISHENGIR_LIBS GLOBAL PROPERTY BISHENGIR_LIBS)
get_property(PRIVATE_BISHENGIR_DIALECT_LIBS GLOBAL PROPERTY BISHENGIR_DIALECT_LIBS)
get_property(PRIVATE_BISHENGIR_CONVERSION_LIBS GLOBAL PROPERTY BISHENGIR_CONVERSION_LIBS)
get_property(PRIVATE_BISHENGIR_TRANSLATION_LIBS GLOBAL PROPERTY BISHENGIR_TRANSLATION_LIBS)
get_property(PRIVATE_BISHENGIR_EXTENSION_LIBS GLOBAL PROPERTY BISHENGIR_EXTENSION_LIBS)

set(LIBS
  ${TEST_LIBS}
  ${PUBLIC_BISHENGIR_LIBS}
  ${PUBLIC_BISHENGIR_DIALECT_LIBS}
  ${PUBLIC_BISHENGIR_CONVERSION_LIBS}
  ${PUBLIC_BISHENGIR_TRANSLATION_LIBS}
  ${PUBLIC_BISHENGIR_EXTENSION_LIBS}
  ${PRIVATE_BISHENGIR_LIBS}
  ${PRIVATE_BISHENGIR_DIALECT_LIBS}
  ${PRIVATE_BISHENGIR_CONVERSION_LIBS}
  ${PRIVATE_BISHENGIR_TRANSLATION_LIBS}
  ${PRIVATE_BISHENGIR_EXTENSION_LIBS}
  MLIRMlirOptMain
)

add_mlir_tool(bishengir-opt
  bishengir-opt.cpp

  DEPENDS
  ${LIBS}
  )


target_include_directories(bishengir-opt PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
if(MLIR_INCLUDE_TESTS)
  target_include_directories(bishengir-opt PRIVATE ${BISHENGIR_SRC_DIR}/test/lib/Dialect)
endif()

target_link_libraries(bishengir-opt PRIVATE ${LIBS})

mlir_check_all_link_libraries(bishengir-opt)
